# rust-webcam-webrtc

./: .gitignore  Cargo.toml  config.json
.github/workflows/: rust.yml
src/: lib.rs  main.rs  socket.rs  video.rs  webrtc.rs  wrtc.rs
