[package]
name = "tas_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
gstreamer = "0.18.8"
gstreamer-app = "0.18.7"
rust_socketio = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.2", features = ["full"] }
webrtc = "0.5.1"
